# daletou_history

./: .gitignore  Cargo.toml  README.md  build.sh  build_ai_pick.sh  daletou.html  url.md
docs/api_docs/: draws.md  health.md  index.md  persistent.md  pick.md  picks.md  startup.md
docs/superpowers/plans/: 2026-04-23-ai-pick-strategy-plan.md
docs/superpowers/specs/: 2026-04-23-ai-pick-strategy-design.md
examples/: ai_pick.rs  bench_parse.rs  history.rs  latest.rs  latest_n.rs
examples/handlers_mod/: mod.rs
examples/picks/: stats.rs
src/: client.rs  db.rs  error.rs  lib.rs  main.rs  types.rs
src/handlers_mod/: mod.rs
src/picks/: mod.rs  prize.rs  scoring.rs  strategies.rs
tests/: integration_test.rs
